# hail

./: .dockerignore  .gitignore  Makefile  build.yaml  check_pip_requirements.sh  config.mk  docker-build.sh  generate-linux-pip-lockfile.sh  generate_pip_lockfile.sh  pyproject.toml
.github/: dependabot.yml
auth/: Dockerfile  Makefile  deployment.yaml  linux-pinned-requirements.txt  requirements.txt
batch/: Dockerfile  Dockerfile.worker  Makefile  az-create-worker-image.sh  build-batch-worker-image-startup-azure.sh  build-batch-worker-image-startup-gcp.sh  build-batch-worker-image-startup.sh  deployment.yaml  driver-nginx.conf  gcp-create-worker-image.sh  pinned-requirements.txt  requirements.txt
batch/db-proxy/: Cargo.toml  Dockerfile
batch/db-proxy/src/: main.rs
benchmark/: Makefile
benchmark-service/: Dockerfile  deployment.yaml
ci/: Dockerfile  Dockerfile.ci-utils  Dockerfile.test  Makefile  bootstrap.py  bootstrap_create_accounts.py  create_database.py  create_initial_account.py  deployment.yaml  pinned-requirements.txt  requirements.txt
dev-docs/: hail-overview.md  services-development-faq.md
devbin/: functions.sh  rotate_keys.py  sync.py
docker/: Dockerfile.base  Dockerfile.checkpoint  Dockerfile.crac  Dockerfile.qob  Dockerfile.service-base  Makefile  linux-pinned-requirements.txt  requirements.txt  service-base-requirements.txt
gateway/: gateway.nginx.conf
gear/: Dockerfile  Makefile  linux-pinned-requirements.txt  pinned-requirements.txt  requirements.txt
grafana/: deployment.yaml
hackathon/: Makefile  pyodide.html
hail/: .gitignore  (+7 more)
(+353 files in other folders)
